--- a/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -166,9 +166,7 @@
     <Resource Include="RichTextBoxFormatBar\Images\Bullets16.png" />
     <Resource Include="RichTextBoxFormatBar\Images\Numbering16.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UpDownBase\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
